# scriptinator

./: Cargo.toml  flake.nix
resources/: scriptinator.desktop
src/: main.rs
