[package]
name = "scriptinator"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
gstreamer = "0.21"
gstreamer-app = "0.21"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
cpal = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
glib = "0.21.0"
chrono = "0.4.41"
ureq = "3.0.12"
serde_json = "1.0.142"
tempfile = "3.20.0"
